--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/roact"]
 	path = vendor/roact
-	url = git://github.com/Roblox/roact.git
+	url = https://github.com/Roblox/roact.git
